fixed design implementation so code works and will product an actual output. made sure bin/ folder never gets tracked. added instructions on how to use premade inputs.